Handle assertions of exceptions the AssertJ way